--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "wasmer-wasi-alternative-prototype/WASI"]
-	path = wasmer-wasi-alternative-prototype/WASI
+[submodule "WASI"]
+	path = wasihost-core/WASI
 	url = https://github.com/WebAssembly/WASI
