--- a/wasihost-core/Cargo.toml
+++ b/wasihost-core/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wasmer-wasi-alternative-prototype"
+name = "wasihost-core"
 version = "0.1.0"
 authors = ["Thomas Bächler <thomas@archlinux.org>"]
 edition = "2018"
