--- a/wasihost-demo/Cargo.toml
+++ b/wasihost-demo/Cargo.toml
@@ -7,7 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-wasmer-runtime-core = "0.14.1"
 wasmer-runtime = "0.14.1"
-wasihost-core = { path = "../wasihost-core" }
-getrandom = "0.1"
+wasihost = { path = "../wasihost" }
