--- a/wasihost/Cargo.toml
+++ b/wasihost/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+getrandom = "0.1"
+parking_lot = "0.10"
+rand = "0.7.3"
 wasmer-runtime = "0.14.1"
 wasihost-core = { path = "../wasihost-core" }
-getrandom = "0.1"
